mandar mails mediante redis

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 GMAIL_USER=sanbartolo.pagos@gmail.com
 GMAIL_PASS=vzjv gufa bgqs bsfm
 PASSWORD=amosanbartolo
+REDIS=redis://default:Bs3Tdymy1wR7golb4y1PI4WjRyaG77I3@redis-14391.c336.samerica-east1-1.gce.redns.redis-cloud.com:14391
+REDIS_HOST=redis-14391.c336.samerica-east1-1.gce.redns.redis-cloud.com
+REDIS_PORT=14391
+REDIS_PASSWORD=Bs3Tdymy1wR7golb4y1PI4WjRyaG77I3
